# cannshmem

./: .gitignore  .gitmodules  CMakeLists.txt  OAT.xml  OWNERS  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  barrier_analysis_report.md  barrier_analysis_report2.md  barrier_comparison.md  barrier_details.md  barrier_flow_analysis.md  hardware_barrier.md  hardware_barrier_offload_design.md  shmem_init.md  shmemi_barrier_core_soft_analysis.md  shmemi_barrier_npu_v3_analysis.md  version.info
examples/: CMakeLists.txt
examples/allgather/: CMakeLists.txt  README.md  allgather_kernel.cpp  allgather_kernel.h  main.cpp  run.sh
examples/allgather/scripts/: data_gen.py  data_statistic.py
examples/allgather_matmul/: CMakeLists.txt  README.md  main.cpp
examples/allgather_matmul/scripts/: run.sh
examples/allgather_matmul_padding/: CMakeLists.txt  README.md  main.cpp
examples/allgather_matmul_padding/scripts/: run.sh
examples/allgather_matmul_with_gather_result/: CMakeLists.txt  main.cpp
examples/allgather_matmul_with_gather_result/scripts/: run.sh
examples/dispatch_gmm_combine/: CMakeLists.txt  MoE.md  README.md  dispatch_gmm_combine_analysis.md  main.cpp
examples/dispatch_gmm_combine/include/: block_epilogue_pertoken_row.h  block_epilogue_pertoken_swiglu.h  block_mmad_preload_async_fixpipe_quant.h  block_mmad_preload_fixpipe.h  copy_gm_to_l1_custom.h  copy_l0c_to_gm_custom.h  dispatch_gmm_combine.h  dispatch_policy_custom.h  moe_token_unpermute.h  moe_token_unpermute_tiling.h  select_helper.h  sync_util.h
examples/dispatch_gmm_combine/include/moe_init_routing_quant_v2/: moe_init_routing_quant_v2.h  moe_v2_common.h  moe_v2_expert_token_out.h  moe_v2_fullload_dynamic_quant.h  moe_v2_fullload_quant.h  moe_v2_fullload_quant_base.h  (+10 more)
examples/dispatch_gmm_combine/scripts/: run.sh
examples/dispatch_gmm_combine/utils/: check_result.py  config.ini  gen_data.py
examples/dynamic_tiling/: CMakeLists.txt  README.md  main.cpp
examples/dynamic_tiling/impl/: CMakeLists.txt  kernel_bf16.cpp  kernel_fp16.cpp
examples/dynamic_tiling/include/: coc_tiling_lut.h  info.h  launch_map.h  tiling.h
examples/dynamic_tiling/scripts/: build.sh  run.sh  test_shapes.csv
examples/dynamic_tiling/tiling/: allgather_tiling.cpp  allreduce_tiling.cpp  coc_tiling_lut.cpp  reducescatter_tiling.cpp
examples/dynamic_tiling/utils/: get_best_result.py  process_data.py
examples/kv_shuffle/: CMakeLists.txt  kv_shuffle_kernel.cpp  kv_shuffle_kernel.h  main.cpp
examples/kv_shuffle/scripts/: golden.py  result_compare.py  run.sh
examples/matmul_allreduce/: CMakeLists.txt  README.md  main.cpp
examples/matmul_allreduce/kernel/: matmul_epilogue_comm.hpp
examples/matmul_allreduce/scripts/: gen_data.py  run.sh  verify_result.py
examples/matmul_reduce_scatter/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter/scripts/: run.sh
examples/matmul_reduce_scatter_padding/: CMakeLists.txt  README.md  main.cpp
examples/matmul_reduce_scatter_padding/scripts/: run.sh  test_shapes.csv
examples/python_extension/: CMakeLists.txt  run.sh
examples/python_extension/src/: torch_bindings.cpp
examples/python_extension/test/: init_test.py  kv_shuffle.py  tls_test.py  unique_id_test.py
examples/rdma_demo/: CMakeLists.txt  README.md  main.cpp  rdma_demo_kernel.cpp  run.sh
examples/rdma_handlewait_test/unuse_handlewait/: CMakeLists.txt  README.md  main.cpp  run.sh  unuse_handlewait_kernel.cpp
examples/rdma_handlewait_test/use_handlewait/: CMakeLists.txt  README.md  main.cpp  run.sh  use_handlewait_kernel.cpp
examples/rdma_perftest/: CMakeLists.txt  README.md  main.cpp  rdma_perftest_kernel.cpp  run.sh
examples/shared_lib/: CMakeLists.txt
examples/shared_lib/include/: kv_shuffle_kernel.h  shmem_kernel.h
examples/shared_lib/src/: shmem_kernel.cpp
examples/templates/docs/: quickstart.md
examples/utils/: gen_data.py  param.h  utils.h  utils.py  verify_result.py
src/: CMakeLists.txt
src/device/: shmemi_barrier.cpp  shmemi_device_intf.h  shmemi_device_rma.cpp  shmemi_device_rma.h  shmemi_handle.cpp  shmemi_memset.cpp
src/host/: shmemi_host_common.h
src/host/common/: shmemi_functions.h  shmemi_host_common.h  shmemi_logger.cpp  shmemi_logger.h
src/host/driver/: shmem_switch_driver.cpp
src/host/init/: shmem_init.cpp  shmemi_init.h
src/host/mem/: shmem_mm.cpp  shmem_rma.cpp  shmemi_mm.h  shmemi_mm_heap.cpp  shmemi_mm_heap.h
src/host/python_wrapper/: CMakeLists.txt  pyshmem.cpp
src/host/sync/: shmemi_sync.cpp  shmemi_sync.h
src/host/team/: shmem_team.cpp  shmemi_team.h
src/memfabric_hybrid/: .clang-format  .gitignore  CMakeLists.txt
src/memfabric_hybrid/script/: build.sh
src/memfabric_hybrid/src/: CMakeLists.txt
src/python/: setup.py  test.py  unique_id_test.py
src/python/aclshmem/: __init__.py
src/python/shmem/: __init__.py
src/transport/: CMakeLists.txt
tests/: CMakeLists.txt
tests/examples/: README.md  config.py  np_normal_generator.py  np_uniform_generator.py  utils.py
tests/examples/fusion_matmul_allreduce/: conftest.py  test_fusion_matmul_allreduce.py
tests/fuzz/: CMakeLists.txt
tests/fuzz/device/: CMakeLists.txt
tests/fuzz/host/: CMakeLists.txt  fuzz_main.cpp  shmem_host_init_fuzz.cpp
tests/fuzz/include/: shmem_fuzz.h  shmem_ptr_kernel.h
tests/unittest/: CMakeLists.txt  main_test.cpp  main_test.h  unittest_main_test.h
tests/unittest/device/: CMakeLists.txt
tests/unittest/host/: CMakeLists.txt  main_test.cpp
tests/unittest/include/: CMakeLists.txt  mem_kernel.h
tests/unittest/init/: init_host_test.cpp
tests/unittest/mem/: mem_host_direct_test.cpp  mem_host_test.cpp  mem_kernel.cpp  mem_putmem_signal_test.cpp  mem_sync_kernel.cpp  scalar_p_host_test.cpp  scalar_p_kernel.cpp  shmem_host_heap_test.cpp  shmem_ptr_host_test.cpp  shmem_ptr_kernel.cpp  shmem_ptr_kernel.h  ub_mem_host_test.cpp  ub_mem_kernel.cpp  ub_non_contiguous_host_test.cpp  ub_non_contiguous_kernel.cpp
tests/unittest/sync/: sync_host_test.cpp  sync_kernel.cpp
tests/unittest/team/: team_allgather_test.cpp  team_host_test.cpp
(+380 files in other folders)
